Revert "Update master"
This reverts commit 5ef5afa19f8867ca4beebbf3fcded7dc0d7b1dcb.

--- a/samplealertscript.html
+++ b/samplealertscript.html
@@ -20,8 +20,8 @@
 <p class="p2">&lt;script type="text/javascript"&gt;</p>
 <p class="p2">&lt;!--</p>
 <p class="p2">function prompter() {</p>
-<p class="p3"><span class="s1">var reply = </span>prompt("Hey there, badly looking stranger!<span class="Apple-converted-space">  </span>What's your name?", "")</p>
-<p class="p2">alert ( "Badly to see you around these parts " + reply + "!")</p>
+<p class="p3"><span class="s1">var reply = </span>prompt("Hey there, good looking stranger!<span class="Apple-converted-space">  </span>What's your name?", "")</p>
+<p class="p2">alert ( "Nice to see you around these parts " + reply + "!")</p>
 <p class="p2">}</p>
 <p class="p2">//--&gt;</p>
 <p class="p2">&lt;/script&gt;</p>
